--- a/README.org
+++ b/README.org
@@ -27,3 +27,7 @@
 #+END_SRC
 
 ** [[https://guides.github.com/features/mastering-markdown/][Mastering Markdown]]
+
+** Mastering Git
+
+- [[https://stackoverflow.com/questions/6089294/why-do-i-need-to-do-set-upstream-all-the-time#6089415][Setting Upsreams]]
