--- a/init.org
+++ b/init.org
@@ -50,6 +50,13 @@
 ** General Default Modes & Preferences
 
 #+BEGIN_SRC emacs-lisp 
+  (scroll-bar-mode -1)                   ; delete scroll bar
+  (global-linum-mode t)                  ; Always show line numbers
+  (tool-bar-mode -1)                     ; Delete Toolbar
+  (put 'narrow-to-page 'disabled nil)     ; enable narrowing page
+  (put 'upcase-region 'disabled nil)      ; enable 'upcase-region
+  (fset 'yes-or-no-p 'y-or-n-p)           ; y-or-n instead of "yes/no" on prompts.
+
   (column-number-mode 1)                  ; Display column numbers
   (show-paren-mode t)                     ; Show matching parentheses
   (blink-cursor-mode t)                   ; Blink cursor (easier to find)
@@ -66,11 +73,7 @@
   (setq undo-limit 3600)                  ; increase number of undo enteries
   (put 'narrow-to-page 'disabled nil)     ; enable narrowing page
   (put 'upcase-region 'disabled nil)      ; enable 'upcase-region
-  (fset 'yes-or-no-p 'y-or-n-p)           ; y-or-n instead of "yes/no" on prompts.
-
-
-  ;;(tool-bar-mode -1)                   ; Delete toolbar
-  ;;(global-linum-mode t)                ; Always show line numbers
+  (fset 'yes-or-no-p 'y-or-n-p)           ; y-or-n instead of "yes/no" on prompts.b
 #+END_SRC
 
 ** Key Bindings
