Update README with Cask instructions
My woes may have been due to the lack of the (cask-initialize), and I
have been using 'cask install' instead of just 'cask' when wanting to
update my packages.

--- a/README.org
+++ b/README.org
@@ -26,6 +26,11 @@
 (format t "God Save GitHub & %s" emacs-lisp)
 #+END_SRC
 
+** Instructions
 
-
-
+  - comment out the require cask, and cask-initialize line
+  - Download and install Cask
+    + while emacs is closed, run cask install
+  - run the 'cask' command, which will download and install all the packages
+  - upadte packges with: 'cask update'
+  - 
