Add Color Theme Library
Since custom-themes complicate things and are difficult to undo, I'm
using color-themes. I can switch easily if I so desire, and if I need
to change at any moment, regardless of which emacs I'm in, I can do
so. If I want to improve upon a theme, I can also do so relatively
easily. Three cheers for color-themes

--- a/init.org
+++ b/init.org
@@ -50,12 +50,15 @@
   Here, I load the Calm Forest color theme after (?) color theme is somehow loaded.
 
 #+BEGIN_SRC emacs-lisp 
-  ;; (load-library "color-theme")
+      (add-to-list 'load-path "~/.emacs.d/themes/color-theme-6.6.0")
+      (require 'color-theme)
+      (eval-after-load "color-theme"
+        '(progn
+           (color-theme-initialize)
+           ;; (color-theme-hober)
 
-  ;;  (eval-after-load "color-theme"
-  ;;    '(progn
-  ;;       (color-theme-initialize)
-  ;;       (color-theme-calm-forest)))
+           ;; This is the current theme in emacs
+           (color-theme-calm-forest)))
 #+END_SRC
 
 *** Set Color Theme
