Set Smex-items to machine-specific/
machine-specific is where I put all my files I will .gitignore but
every .emacs.d should keep track of. Ex: last used M-x expressions,
ido-files, emacs desktop. Perhaps Smex doesn't fit into that category,
I'll think about it.

--- a/init.org
+++ b/init.org
@@ -747,6 +747,10 @@ Do not ask before evaluating code blocks.
   ;;       (expand-file-name "~/.emacs.d/plantuml.jar"))
 #+END_SRC
 
+*** Ido
+#+BEGIN_SRC emacs-lisp 
+;; ido.last file should be in .emacs.d/machine-specific/
+#+END_SRC
 *** FCI								     :unused:
 #+BEGIN_SRC emacs-lisp 
   (setq fci-rule-color "#424242")         ; set line color
@@ -810,6 +814,7 @@ Do not ask before evaluating code blocks.
 *** Smex
 
 #+BEGIN_SRC emacs-lisp
+  (setq smex-save-file "~/.emacs.d/machine-specific/smex-items")
   (global-set-key (kbd "M-x") 'smex)
 #+END_SRC
 
