Move Smex-items into .emacs.d/
I want VC to recognize this file. It is not specific to each machine
because the M-x functions I use will be repeated. I don't use
different M-x calls when I'm on a different computer.

--- a/init.org
+++ b/init.org
@@ -814,8 +814,8 @@ Do not ask before evaluating code blocks.
 *** Smex
 
 #+BEGIN_SRC emacs-lisp
-  (setq smex-save-file "~/.emacs.d/machine-specific/smex-items")
   (global-set-key (kbd "M-x") 'smex)
+  (setq smex-save-file "~/.emacs.d/")
 #+END_SRC
 
 *** Tea Time
