Create Backup Files Directory
I want the backup files to be stored in one place, but since the files
are specific to each computer, I put put them into a folder,
backup-files, which will be on every computer, but will be empty,
because of the .gitignore specification that *~ files be ignored.

--- a/init.org
+++ b/init.org
@@ -235,6 +235,25 @@
   
 *** Notmuchmail
 *** 
+** Backup Files (~)
+
+  [[http://stackoverflow.com/questions/151945/how-do-i-control-how-emacs-makes-backup-files][SO: Control Backup Files]]
+
+#+BEGIN_SRC emacs-lisp 
+
+  (setq backup-directory-alist `(("." . "~/.emacs.d/machine-specific/backup-files")))
+  (setq backup-by-copying t)
+
+
+  ;; Haven't decided if I want these...
+  ;; (setq delete-old-versions t
+  ;;   kept-new-versions 6
+  ;;   kept-old-versions 2
+  ;;   version-control t)
+
+  ;; (setq make-backup-files nil)
+#+END_SRC
+
 ** Mode Line
 *** Smart Mode Line						     :unused:
 
